# prometheus_speedtest

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  BUILD.bazel  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  WORKSPACE  description.txt  prometheus_speedtest.py  prometheus_speedtest_test.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml  python.yml
deploy/: deployment.yaml
example/: docker-compose.yaml  grafana-dashboard.json  prometheus.yml
prometheus_speedtest/: prometheus_speedtest.py  version.py
prometheus_speedtest/static/: index.html
snap/: snapcraft.yaml
static/: usage.html
tests/: prometheus_speedtest_test.py
