load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar", "pkg_deb")
load("@subpar//:subpar.bzl", "par_binary")
load(
    "@io_bazel_rules_python//python:python.bzl",
    "py_binary",
    "py_library",
    "py_test",
)
load("@pip_deps//:requirements.bzl", "requirement")

par_binary(
    name = "prometheus_speedtest",
    srcs = ["prometheus_speedtest.py"],
    deps = [
        requirement("prometheus_client"),
        requirement("speedtest-cli"),
    ],
)

py_test(
    name = "prometheus_speedtest_test",
    srcs = ["prometheus_speedtest_test.py"],
    deps = [
        "//:prometheus_speedtest",
        requirement("mock"),
        requirement("prometheus_client"),
        requirement("speedtest-cli"),
    ],
)

pkg_tar(
    name = "debian-data",
    srcs = [
        "//:prometheus_speedtest.par",
    ],
    mode = "0755",
    package_dir = "/usr/bin",
)

pkg_deb(
    name = "prometheus_speedtest-debian",
    data = ":debian-data",
    description_file = ":description.txt",
    maintainer = "Jean-Ralph Aviles <jr@jraviles.com>",
    package = "prometheus_speedtest",
    version_file = ":version.txt",
)
